--- a/main.html
+++ b/main.html
@@ -3,11 +3,13 @@
 <html>
 
 <head>
+	<title>Clock Timer</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	 <p id="timer"></p> 
     <script type="text/javascript" src="./script.js">
 </script>
 
